create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="#top">
                          <img src="assets/images/mbr-168x112.jpg" alt="האינטרנט" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -214,7 +214,7 @@
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="https://mobirise.com/">
-                        <img src="assets/images/mbr-164x119.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/mbr-162x108.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
